// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorklogPage should display process reminder 1`] = `
<div>
  <WithStyles(GridWrapper)
    container={true}
  >
    <Connect(Process) />
    <Connect(WithStyles(ReduxForm)) />
    <Connect(WithStyles(Calendar)) />
    <WithStyles(Button)
      color="primary"
      onClick={[Function]}
      variant="fab"
    >
      <pure(Print) />
    </WithStyles(Button)>
  </WithStyles(GridWrapper)>
  <Connect(WithStyles(Printer)) />
</div>
`;

exports[`WorklogPage should render properly 1`] = `
<div>
  <WithStyles(GridWrapper)
    container={true}
  >
    <Connect(WithStyles(ReduxForm)) />
    <Connect(WithStyles(Calendar)) />
    <WithStyles(Button)
      color="primary"
      onClick={[Function]}
      variant="fab"
    >
      <pure(Print) />
    </WithStyles(Button)>
  </WithStyles(GridWrapper)>
  <Connect(WithStyles(Printer)) />
</div>
`;

exports[`WorklogPage should render transport dialog 1`] = `
<div>
  <WithStyles(GridWrapper)
    container={true}
  >
    <Connect(WithStyles(ReduxForm)) />
    <Connect(WithStyles(Calendar)) />
    <WithStyles(Button)
      color="primary"
      onClick={[Function]}
      variant="fab"
    >
      <pure(Print) />
    </WithStyles(Button)>
  </WithStyles(GridWrapper)>
  <Connect(WithStyles(Printer)) />
  <ProofOfTransportDialog
    onClose={[Function]}
    onDecline={[Function]}
    open={true}
  />
</div>
`;
